--- a/cliente/package.json
+++ b/cliente/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.15.9",
+    "uniqid": "^5.4.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -41,5 +45,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack": "^5.97.1",
     "webpack-dev-server": "^5.2.0"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
